refactor: use class `TokenUtil` for token generation (#2592)
* refactor: use class `TokenUtil` for token generation

* refactor: remove unused import